--- a/src/assets/scss/login/index.scss
+++ b/src/assets/scss/login/index.scss
@@ -14,49 +14,48 @@
     @include flex-layout(row,center,center);
     .login-panel{
       width: 300px;
-      ::v-deep .el-tabs__header{
+      :deep(.el-tabs__header){
         margin-bottom: 45px;
       }
-      ::v-deep .el-tabs__nav-scroll{
+      :deep(.el-tabs__nav-scroll){
         width: 100%;
         margin: 0 auto;
-        ::v-deep .el-tabs__nav{
-          float: initial;
-          text-align: center;
-        }
       }
-      ::v-deep .el-input__wrapper{
+      :deep(.el-tabs__nav){
+        float: initial;
+        text-align: center;
+      }
+      :deep(.el-input__wrapper){
         border-radius: 44px;
         background: #f6f6f8;
-
       }
-      ::v-deep .el-input__wrapper:hover{
+      :deep(.el-input__wrapper:hover){
         box-shadow: 0 0 0 1px $orange inset !important;
       }
-      ::v-deep .el-input__wrapper.is-focus{
+      :deep(.el-input__wrapper.is-focus){
         box-shadow: 0 0 0 1px $orange inset !important;
       }
-      ::v-deep .el-input__inner{
+      :deep(.el-input__inner){
         height: 44px;
         line-height: 42px;
         background: #F6F6F8;
         border-radius: 40px;
         border: none;
       }
-      ::v-deep .el-tabs__nav-wrap::after{
+      :deep(.el-tabs__nav-wrap::after){
         display: none;
       }
-      ::v-deep .el-tabs__item{
+      :deep(.el-tabs__item){
         font-size: 24px;
         color: #999;
         &.is-active{
           color: $orange;
         }
       }
-      ::v-deep .el-tabs__active-bar{
+      :deep(.el-tabs__active-bar){
         background-color:$orange;
       }
-      ::v-deep .el-form-item__error{
+      :deep(.el-form-item__error){
         left: 15px;
       }
     }
