--- a/src/assets/scss/layout/commonHeader.scss
+++ b/src/assets/scss/layout/commonHeader.scss
@@ -1,7 +1,7 @@
 .header-common{
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  width: 100vw;
   height: 80px;
   position: relative;
   align-items: center;
@@ -15,7 +15,8 @@
     cursor: pointer;
   }
   .el-menu{
-    width: inherit;
+    flex: 1;
+    min-width: 800px;
     padding: 0 25px;
     justify-content: right;
     height: 80px;
@@ -27,7 +28,8 @@
         padding-right: 0;
       }
     }
-    .el-sub-menu__title{
+    .el-sub-menu{
+      height: 80px;
       font-size: 16px;
     }
   }
@@ -35,4 +37,7 @@
     box-shadow: rgb(235 235 235) 0px 0px 0px 2px ;
     border-radius: 50% ;
   }
+}
+:v-deep(.el-sub-menu__title){
+  font-size: 16px;
 }
