--- a/src/assets/scss/detail/index.scss
+++ b/src/assets/scss/detail/index.scss
@@ -7,6 +7,7 @@
     border-radius: 6px;
   }
   .el-carousel__item--card{
+    box-sizing: border-box;
     border: 10px solid #fff;
     border-radius: 6px;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.2);
