--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -29,3 +29,18 @@ $orange:rgba(255, 81, 0, 0.842);
 	-webkit-line-clamp: $line;
 	overflow: hidden;
 }
+
+// 订单占位
+@mixin  placeholder-order($text:left){
+  text-align: $text;
+  position: absolute;
+  top: 80px;
+  background-color: #fff;
+  padding: 0px 10px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.2);
+  right: 0px;
+  max-height: 145px;
+  overflow-y: auto;
+  z-index: 15;
+  width: 180px;
+}
