feat: vue3新特性 Teleport 将 DOM 移出组件外

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -19,3 +19,13 @@ body{
 .loading-block{
   @include placeholder-order(center);
 }
+
+.full-screen-mask{
+  position:fixed;
+  width: 100%;
+  background-color: transparent;
+  z-index: 10;
+  left:0;
+  top:0;
+  height: 100%;
+}
