--- a/src/assets/scss/home/index.scss
+++ b/src/assets/scss/home/index.scss
@@ -13,6 +13,58 @@
     margin: 5px 0 25px 0;
     font-size: 16px;
   }
+  .el-tabs{
+    height: 80px;
+    .el-tabs__nav-wrap{
+      padding: 0 40px;
+    }
+    .el-tabs__header{
+      border-bottom: none;
+      .el-tabs__nav{
+        border: none;
+        padding: 10px 0;
+      }
+      .el-tabs__item.is-active{
+        background: #055256;
+        color: #fff;
+        border-bottom-color:#055256;
+      }
+    }
+    .el-tabs__item{
+      width: 100px;
+      text-align: center;
+      box-shadow: 0px 1px 2px rgb(0 0 0 / 15%);
+      min-width: 120px;
+      height: 48px;
+      padding: 0px 7px !important;
+      border: solid 0.5px #D8D8D8;
+      line-height: 48px;
+      box-sizing: initial;
+      margin-right: 20px;
+      border-radius: 4px;
+      font-size: 18px;
+      font-weight: bold;
+      &:hover{
+        box-shadow: 0px 3px 6px rgb(0 0 0 / 15%);
+        color: inherit;
+      }
+      &:first-child{
+        border-left: 1px solid #D8D8D8;
+      }
+    }
+    .el-tabs__nav-next, .el-tabs__nav-prev{
+      height: 28px;
+      width: 28px;
+      border: 1px solid #ccc;
+      border-radius: 100%;
+      top: 50%;
+      margin-top: -14px;
+      background: #fff;
+      text-align: center;
+      z-index: 10;
+      line-height: 30px;
+    }
+  }
   .main-wrapper{
     @include main-wrapper()
   }
